--- a/projects.html
+++ b/projects.html
@@ -182,7 +182,7 @@
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="eternaluchiha/projects/shredfx/index.html" class="btn-small">
+                            <a href="/projects/shredfx/index.html" class="btn-small">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                         </div>
