--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="eternaluchiha/projects/gym.html" class="btn-small">
+                            <a href="projects/gym.html" class="btn-small">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                         </div>
@@ -116,7 +116,7 @@
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="eternaluchiha/projects/school-website/index.html" class="btn-small">
+                            <a href="projects/school-website/index.html" class="btn-small">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                         </div>
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="eternaluchiha/projects/restaurant.html" class="btn-small">
+                            <a href="projects/restaurant.html" class="btn-small">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                         </div>
@@ -182,7 +182,7 @@
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="/projects/shredfx/index.html" class="btn-small">
+                            <a href="projects/shredfx/index.html" class="btn-small">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                         </div>
@@ -215,7 +215,7 @@
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="/projects/event.html" class="btn-small">
+                            <a href="projects/event.html" class="btn-small">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                         </div>
