--- a/projects.html
+++ b/projects.html
@@ -159,7 +159,7 @@
                 <!-- ShredFX Portfolio -->
                 <div class="project-card" data-category="portfolio" id="shredfx">
                     <div class="project-img">
-                        <img src="/projects/ShredFX/shred.png" alt="ShredFX Portfolio">
+                        <img src="projects/ShredFX/shred.png" alt="ShredFX Portfolio">
                         <div class="project-tag">Portfolio Showcase</div>
                     </div>
                     <div class="project-content">
