--- a/projects/ShredFX/index.html
+++ b/projects/ShredFX/index.html
@@ -574,7 +574,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="index.html" class="logo">
-                <img src="https://ik.imagekit.io/k6lrn9lgb/New%20Project%205%20_BD7D037_.png" alt="ShredFX Logo" class="logo-img">
+                <img src="https://ik.imagekit.io/k6lrn9lgb/shredfxlogo.png?updatedAt=1769683949053" alt="ShredFX Logo" class="logo-img">
                 <span class="logo-text">Shred<span class="fx">FX</span></span>
             </a>
             <div class="nav-links">
