--- a/projects/gym.html
+++ b/projects/gym.html
@@ -1069,7 +1069,7 @@
 
 <!-- Hero Section -->
 <section class="hero">
-    <div class="hero-bg" style="background-image: url('/projects/body.jpg');"></div>
+    <div class="hero-bg" style="background-image: url('projects/body.jpg');"></div>
     <div class="hero-overlay"></div>
     <div class="hero-content">
         <h1>ETERNAL UCHIHA GYM</h1>
