--- a/projects/gym.html
+++ b/projects/gym.html
@@ -1278,27 +1278,27 @@
     </div>
     <div class="gallery-grid">
         <div class="gallery-item">
-            <img src="https://unsplash.com/photos/mid-adult-overweight-woman-with-headphones-running-on-treadmill-in-gym-8mGRfQRH-9I" alt="Cardio Zone" class="gallery-image">
+            <img src="https://ik.imagekit.io/k6lrn9lgb/cardio.png" alt="Cardio Zone" class="gallery-image">
             <div class="gallery-label">Cardio Zone</div>
         </div>
         <div class="gallery-item">
-            <img src="https://unsplash.com/photos/black-and-silver-exercise-equipments-0-A_G_XeUqc" alt="Free Weights Area" class="gallery-image">
+            <img src="https://ik.imagekit.io/k6lrn9lgb/free-weights.png" alt="Free Weights Area" class="gallery-image">
             <div class="gallery-label">Free Weights Area</div>
         </div>
         <div class="gallery-item">
-            <img src="https://unsplash.com/photos/woman-in-black-tank-top-sitting-on-brown-wooden-bench-0Wra5YYVQJE" alt="Functional Training" class="gallery-image">
+            <img src="https://ik.imagekit.io/k6lrn9lgb/functional.jpg" alt="Functional Training" class="gallery-image">
             <div class="gallery-label">Functional Training</div>
         </div>
         <div class="gallery-item">
-            <img src="https://unsplash.com/photos/always-with-friends-in-gym-people-at-gym-Pj9exQKkuW8" alt="Group Class Studio" class="gallery-image">
+            <img src="https://ik.imagekit.io/k6lrn9lgb/group.png" alt="Group Class Studio" class="gallery-image">
             <div class="gallery-label">Group Class Studio</div>
         </div>
         <div class="gallery-item">
-            <img src="https://unsplash.com/photos/a-room-with-a-glass-door-that-has-a-plant-in-it-znZXwcHdKwM" alt="Steam & Spa" class="gallery-image">
+            <img src="https://ik.imagekit.io/k6lrn9lgb/spa.png" alt="Steam & Spa" class="gallery-image">
             <div class="gallery-label">Steam & Spa</div>
         </div>
         <div class="gallery-item">
-            <img src="https://unsplash.com/photos/slim-dedicated-yogi-girl-standing-on-the-mat-in-lunge-with-arm-extended-up-yoga-pose-yoga-studio-interior-0wtRgT9mQXM" alt="Stretching Area" class="gallery-image">
+            <img src="https://ik.imagekit.io/k6lrn9lgb/stretching.pngmQXM" alt="Stretching Area" class="gallery-image">
             <div class="gallery-label">Stretching Area</div>
         </div>
     </div>
